# test_work_

./: README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 651ba3a5c639_add_tables.py
app/: Dockerfile  main.py
app/db/: .env  config.py  database.py  postgres.py  schemas.py
app/shop/: models.py  routers.py  schema.py  services.py
app/utils/: logger.py  middleware.py
logs/: app-error.txt  common-logs.txt
